Reverted dependencies